# aoc-rust

./: .gitignore  Cargo.toml  README.md
.github/actions-rs/: grcov.yml
.github/workflows/: rust-coverage.yml  rust-tests.yml  rust.yml
adv2015/: Cargo.toml
adv2015/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
adv2020/: Cargo.toml
adv2020/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
adventofcode/: Cargo.toml
adventofcode/src/: advent.rs  main.rs
src/: main.rs
