[package]
name = "adv2015"
version = "0.25.1"
authors = ["Vest <Vest@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "adv2015"
path = "src/lib.rs"
bench = false
doc = false

[dependencies]
md5 = "0.7.0"
permute = "0.1.0"
combinations = "0.1.0"
regex = "1.4.2"
rand = "0.7.3"
divisors = "0.2.1"
