[package]
name = "adv2015"
version = "0.25.2"
authors = ["Vest <Vest@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "adv2015"
path = "src/lib.rs"
bench = false
doc = false

[dependencies]
md5 = "0.7"
permute = "0.2"
combinations = "0.1"
regex = "1.9"
rand = "0.8"
divisors = "0.2"
