[package]
name = "adv2020"
version = "0.17.2"
authors = ["Vest <Vest@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "adv2020"
path = "src/lib.rs"
bench = false
doc = false

[dependencies]
combinations = "0.1"
itertools = "0.13"
