[package]
name = "adventofcode"
version = "0.2.4"
authors = ["Vest <Vest@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.10.8", features = ["blocking"] }
clap = "2.33.3"
adv2015 = { path = "../adv2015" }
adv2020 = { path = "../adv2020" }
